style: shift About Me and landing content further left to 4% and 5% to maximize space and prevent rover overlaps

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -59,7 +59,7 @@
   .about-me {
     padding: 0px;
     width: 44%;
-    margin-left: 8%;
+    margin-left: 4%;
   }
   .about-me p {
     font-size: 22px;
@@ -68,7 +68,7 @@
 }
 @media only screen and (min-width: 1200px) {
   .about-me {
-    margin-left: 10%;
+    margin-left: 5%;
     width: 42%;
   }
 }
